--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "react": "^0.14.5",
     "react-document-title": "^2.0.1",
     "react-dom": "^0.14.5",
+    "react-redux": "^4.0.0",
     "react-router": "^1.0.3",
     "reactify": "^1.1.1",
-    "sass-loader": "^1.0.3",
-    "style-loader": "^0.12.3",
-    "webpack": "^1.12.9",
-    "react-redux": "^4.0.0",
     "redux": "^3.0.4",
-    "redux-promise": "^0.5.0"
+    "redux-promise": "^0.5.0",
+    "sass-loader": "^1.0.3",
+    "skylinkjs": "^0.6.7",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.12.9"
   },
   "devDependencies": {
     "babel-eslint": "^4.0.5",
