removed the exposure of the API key. now a backend request.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^0.15.6",
     "express": "^4.13.1",
     "history": "^1.17.0",
+    "jquery": "^2.2.0",
     "lodash": "^4.0.0",
     "node-sass": "^3.4.2",
     "path": "^0.11.14",
